--- a/Tangerine/Tangerine.vcxproj.filters
+++ b/Tangerine/Tangerine.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Player.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="StatusEffect.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="field_clover.fld">
@@ -41,6 +44,9 @@
       <Filter>头文件\utils</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="StatusEffect.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
