--- a/Tangerine/Tangerine.vcxproj.filters
+++ b/Tangerine/Tangerine.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="源文件\sgk\utils">
       <UniqueIdentifier>{4b203c7f-2d5f-4a1b-9d08-faaf70ed0c63}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\sgk\network">
+      <UniqueIdentifier>{7b0a7c67-21fe-41ec-9d50-530ef8145100}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OJMap.cpp">
@@ -63,6 +66,9 @@
     </ClInclude>
     <ClInclude Include="sgk\general\Player.h">
       <Filter>头文件\sgk\general</Filter>
+    </ClInclude>
+    <ClInclude Include="sgk\network\websocket.h">
+      <Filter>头文件\sgk\network</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
